<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.netcracker.cloud.maas.client</groupId>
    <artifactId>maas-client-parent</artifactId>
    <version>12.2.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <cloud-core.core-context-propagation.version>8.2.1-SNAPSHOT</cloud-core.core-context-propagation.version>
        <cloud-core.core-blue-green-state-monitor.version>2.1.0-SNAPSHOT</cloud-core.core-blue-green-state-monitor.version>
        <cloud-core.core-utils.version>3.1.0-SNAPSHOT</cloud-core.core-utils.version>

        <kafka.version>4.2.0</kafka.version>

        <sonar.coverage.jacoco.xmlReportPaths>
            ${project.basedir}/../report-aggregate/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
    </properties>

    <modules>
        <module>client</module>

        <module>rabbit-context-propagation</module>
        <module>kafka-context-propagation</module>

        <module>deployment-version-tracker</module>
        <module>kafka-blue-green-consumer</module>
        <module>rabbit-blue-green</module>

        <module>kafka-streams-adapter</module>

        <module>bom</module>
        <module>report-aggregate</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/Netcracker/qubership-core-java-libs.git</connection>
        <developerConnection>scm:git:https://github.com/Netcracker/qubership-core-java-libs.git</developerConnection>
        <url>https://github.com/Netcracker/qubership-core-java-libs</url>
        <tag>HEAD</tag>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.netcracker.cloud</groupId>
                <artifactId>blue-green-state-monitor-java-plain</artifactId>
                <version>${cloud-core.core-blue-green-state-monitor.version}</version>
            </dependency>
            <dependency>
                <groupId>com.netcracker.cloud</groupId>
                <artifactId>context-propagation-core</artifactId>
                <version>${cloud-core.core-context-propagation.version}</version>
            </dependency>
            <dependency>
                <groupId>com.netcracker.cloud</groupId>
                <artifactId>framework-contexts</artifactId>
                <version>${cloud-core.core-context-propagation.version}</version>
            </dependency>
            <dependency>
                <artifactId>k8s-utils</artifactId>
                <groupId>com.netcracker.cloud.security.core.utils</groupId>
                <version>${cloud-core.core-utils.version}</version>
            </dependency>
            <dependency>
                <groupId>com.netcracker.cloud</groupId>
                <artifactId>core-internal-bom</artifactId>
                <version>1.0.0-SNAPSHOT</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-clients</artifactId>
                <version>${kafka.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-streams</artifactId>
                <version>${kafka.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok-maven-plugin</artifactId>
                    <version>1.18.20.0</version>
                    <executions>
                        <execution>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>delombok</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.44</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.14</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <environmentVariables>
                        <DOCKER_HOST>${env.TEST_DOCKER_URL}</DOCKER_HOST>
                        <TESTCONTAINERS_RYUK_DISABLED>true</TESTCONTAINERS_RYUK_DISABLED>
                    </environmentVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/*</url>
            <snapshots />
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/qubership-maas-client</url>
        </repository>
    </distributionManagement>
</project>
